css edit in admin.scss

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -10334,3 +10334,7 @@ body {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25);
 }
+
+#category-index-left-col .add_category {
+  margin-top: 2rem;
+}
