--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -114,3 +114,9 @@ body {
     border-color: transparent;
     box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25);
 }
+
+#category-index-left-col {
+    .add_category {
+        margin-top: 2rem;
+    }
+}
